fix layout issues on small devices

--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -1,15 +1,24 @@
 .header {
-  padding: 2rem 0 0;
+  padding: 1rem 0 0;
   display: flex;
   justify-content: center;
   position: relative;
   align-items: center;
 
+  @media screen and (min-width: 48rem) {
+    padding: 2rem 0 0;
+  }
+
   .title {
-    margin: 0 5rem;
+    margin: 0 1rem;
+    font-size: 2.4rem;
     color: rgba(255, 255, 255, .95);
     text-shadow: 0 0 0.6rem rgba(0, 0, 0, 0.5);
-    font-size: 4.8rem;
+
+    @media screen and (min-width: 48rem) {
+      margin: 0 5rem;
+      font-size: 4.8rem;
+    }
   }
 
   .back, .forward, .hamburger {
