--- a/src/scssCommon/_boxes.scss
+++ b/src/scssCommon/_boxes.scss
@@ -2,11 +2,14 @@
   position: relative;
   font-size: 12px;
   text-align: justify;
-  max-width: 480px;
-  border-radius: 3px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .2);
+  max-width: 48rem;
   background-image: linear-gradient(rgba(252, 255, 255, 0.9), white);
   padding: 2rem;
+
+  @media screen and (min-width: 48rem) {
+    border-radius: 3px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, .2);
+  }
 
   &:after, &:before {
     content: "";
