--- a/src/scssCommon/_controls.scss
+++ b/src/scssCommon/_controls.scss
@@ -7,19 +7,32 @@
   cursor: pointer;
   //background-image: radial-gradient(farthest-corner at 5px 5px, rgba(255, 255, 255, .8), rgba(100, 100, 100, .8));
   text-align: center;
-  width: 4rem;
-  height: 4rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   margin: .5rem;
   background-color: rgba(255, 255, 255, .5);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 
+  @media screen and (min-width: 48rem) {
+    width: 4rem;
+    height: 4rem;
+  }
+
   &.large {
-    width: 6rem;
-    height: 6rem;
+    width: 4.5rem;
+    height: 4.5rem;
+    @media screen and (min-width: 48rem) {
+      width: 6rem;
+      height: 6rem;
+    }
     &:before {
-      font-size: 3rem;
-      line-height: 6rem;
+      font-size: 2.25rem;
+      line-height: 4.5rem;
+      @media screen and (min-width: 48rem) {
+        font-size: 3rem;
+        line-height: 6rem;
+      }
     }
   }
 
@@ -35,10 +48,15 @@
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-size: 2.4rem;
-    line-height: 4rem;
     color: transparent;
     text-shadow: 0 0 0 rgba(255, 255, 255, 0.8), -1px -1px 0 rgba(0, 0, 0, 0.4);
+    font-size: 1.8rem;
+    line-height: 3rem;
+
+    @media screen and (min-width: 48rem) {
+      font-size: 2.4rem;
+      line-height: 4rem;
+    }
   }
 
   &:hover {
